import SwiftUI

extension CanvasTool {
    var label: String {
        switch self {
        case .ballpoint: "Ballpoint"
        case .fineliner: "Fineliner"
        case .mechanicalPencil: "Mechanical pencil"
        case .pencil: "Pencil"
        case .marker: "Marker"
        case .highlighter: "Highlighter"
        case .brush: "Brush"
        case .calligraphyPen: "Calligraphy pen"
        case .eraser: "Eraser"
        case .lasso: "Lasso"
        case .handwritingToText: "Handwriting to text"
        }
...
